fix search icon alignment

--- a/_sass/mdb/scss/custom/_styles.scss
+++ b/_sass/mdb/scss/custom/_styles.scss
@@ -2162,8 +2162,8 @@ section {
 
         .ais-search-box--magnifier-wrapper {
             &::after {
-                padding: 16px;
-                line-height: 17px;
+                padding: 14px;
+                line-height: 0px;
             }
         }
     }
